--- a/app/src/main/res/layout/activity_life_cycle_sub.xml
+++ b/app/src/main/res/layout/activity_life_cycle_sub.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".LifeCycleSubActivity">
 
     <Button
-        android:id="@+id/bt_next"
+        android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:onClick="onButtonClick"
-        android:text="@string/bt_next"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/bt_previous"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
